--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Skylancer: Coming Soon</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>There'll be some cool stuff here soon, promise!</p>
 </body>
 </html>
